@@ -5,8 +5,8 @@
 	<description/>
 	<post-install type="none"/>
 	<requireAuthorization/>
-	<installFrom>/home/lordyesta/Projects/libvmdk/macosx/tmp/lib64/python2.7/site-packages</installFrom>
-	<installTo mod="true">/usr/lib64/python2.7/site-packages</installTo>
+	<installFrom>/home/lordyesta/Projects/libvmdk/macosx/tmp/</installFrom>
+	<installTo mod="true"></installTo>
 	<flags>
 		<followSymbolicLinks/>
 	</flags>
